--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,9 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "functions": {
+      "predeploy": "npm --prefix functions run build"
+    }
   }
 }
