--- a/firebase.json
+++ b/firebase.json
@@ -5,9 +5,21 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "functions": {
-      "predeploy": "npm --prefix functions run build"
+    ]
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
     }
-  }
+  ]
 }
