--- a/firebase.json
+++ b/firebase.json
@@ -1,25 +1,15 @@
 {
   "hosting": {
-    "public": "public",
+    "redirects": [{
+      "source": "/404",
+      "destination": "/",
+      "type": 301
+    }],
+    "public": "public/dist",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
-  },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run build"
-      ]
-    }
-  ]
+  }
 }
